// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect DateSelect date 1`] = `
<DateSelect
  cancelText="取消"
  disabled={false}
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  placeholder="请选择日期"
  prefixCls="za-select"
  title="选择日期"
  value="2017-09-06"
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2017-09-05"
    />
    2017-09-05
    <DatePicker
      cancelText="取消"
      defaultValue=""
      disabled={false}
      minuteStep={1}
      mode="date"
      okText="确定"
      onCancel={[Function]}
      onInit={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value={2017-09-06T04:00:00.000Z}
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      />
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect datetime 1`] = `
<DateSelect
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  max="2017-11-02 14:00"
  min="2017-11-02 11:00"
  minuteStep={1}
  mode="datetime"
  okText="确定"
  onCancel={[Function]}
  placeholder="请选择时间"
  prefixCls="za-select"
  title="选择时间"
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2017-11-03 11:00"
    />
    2017-11-03 11:00
    <DatePicker
      cancelText="取消"
      defaultValue="2017-11-03 15:00"
      disabled={false}
      max="2017-11-02 14:00"
      min="2017-11-02 11:00"
      minuteStep={1}
      mode="datetime"
      okText="确定"
      onCancel={[Function]}
      onInit={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value={2017-11-03T19:00:00.000Z}
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      />
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect time 1`] = `
<DateSelect
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  minuteStep={15}
  mode="time"
  okText="确定"
  onCancel={[Function]}
  placeholder="请选择时间"
  prefixCls="za-select"
  title="选择时间"
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="11:00"
    />
    11:00
    <DatePicker
      cancelText="取消"
      defaultValue="2017-11-03 15:00"
      disabled={false}
      minuteStep={15}
      mode="time"
      okText="确定"
      onCancel={[Function]}
      onInit={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value={2017-11-03T19:00:00.000Z}
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      />
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect trigger visible 1`] = `
<DateSelect
  cancelText="取消"
  defaultValue="2017-11-03"
  disabled={false}
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  title="请选择"
  valueMember="value"
  visible={true}
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2017-11-02"
    />
    2017-11-02
    <DatePicker
      cancelText="取消"
      defaultValue="2017-11-03"
      disabled={false}
      minuteStep={1}
      mode="date"
      okText="确定"
      onCancel={[Function]}
      onInit={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value={2017-11-03T04:00:00.000Z}
      valueMember="value"
      visible={true}
    >
      <Popup
        onMaskClick={[Function]}
        visible={true}
      />
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect wheelDefaultValue 1`] = `
<DateSelect
  cancelText="取消"
  disabled={false}
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  placeholder="请选择日期"
  prefixCls="za-select"
  title="选择日期"
  valueMember="value"
  visible={true}
  wheelDefaultValue="2017-11-03 15:00"
>
  <div
    className="za-select-input za-select-placeholder"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value=""
    />
    请选择日期
    <DatePicker
      cancelText="取消"
      defaultValue=""
      disabled={false}
      minuteStep={1}
      mode="date"
      okText="确定"
      onCancel={[Function]}
      onInit={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value=""
      valueMember="value"
      visible={true}
      wheelDefaultValue="2017-11-03 15:00"
    >
      <Popup
        onMaskClick={[Function]}
        visible={true}
      />
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect year 1`] = `
<DateSelect
  cancelText="取消"
  disabled={false}
  locale={
    Object {
      "day": "",
      "hour": "",
      "minute": "",
      "month": "",
      "year": "",
    }
  }
  minuteStep={1}
  mode="year"
  okText="确定"
  onCancel={[Function]}
  placeholder="请选择年份"
  prefixCls="za-select"
  title="选择年份"
  value="2017"
  valueMember="value"
>
  <div
    className="za-select-input"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2016年"
    />
    2016年
    <DatePicker
      cancelText="取消"
      defaultValue=""
      disabled={false}
      locale={
        Object {
          "day": "",
          "hour": "",
          "minute": "",
          "month": "",
          "year": "",
        }
      }
      minuteStep={1}
      mode="year"
      okText="确定"
      onCancel={[Function]}
      onInit={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      placeholder="请选择"
      prefixCls="za-picker"
      title="请选择"
      value={2017-01-01T00:00:00.000Z}
      valueMember="value"
      visible={false}
    >
      <Popup
        onMaskClick={[Function]}
        visible={false}
      />
    </DatePicker>
  </div>
</DateSelect>
`;
